--- a/digipal/static/css/dpjqui.css
+++ b/digipal/static/css/dpjqui.css
@@ -5,9 +5,9 @@
     padding:0 !important;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
     z-index: 900;
-    overflow-y: auto;
+    /* overflow-y: auto; */
     margin:0;
-    width:290px !important;
+    /* width:290px !important; */
 }
 
 .ui-dialog p:last-child{
